# jogo_plataforma

./: .gitignore  CMakeLists.txt  README.md  buildAndRun.bat  buildAndRun.sh
.github/workflows/: cmake-multi-platform.yml
assets/: player_glide_gliding.aseprite  textbank.txt
assets/shaders/: crt.fs  crt_pi.fs  default_shader.fs  level_transition.fs  rainbow_strip.fs
include/: raygui.h
levels/: _blueprint.lvl  acid_glide.lvl  bounce.lvl  hook_it.lvl  intro.lvl  level_1.lvl  level_2.lvl  level_3.lvl  my_level.lvl  new_level.lvl  overworld.ow
raylib/src/: rcore.c
raylib_cheatsheet/: raylib - cheatsheet.htm
raylib_cheatsheet/raylib - cheatsheet_arquivos/: page-script.js
src/: animation.cpp  animation.hpp  assets.c  assets.cpp  assets.h  assets.hpp  camera.c  camera.cpp  camera.h  camera.hpp  collision.c  collision.h  core.c  core.cpp  core.h  core.hpp  debug.c  debug.cpp  debug.h  debug.hpp  editor.c  editor.cpp  editor.h  editor.hpp  enemy.c  enemy.h  entity.c  entity.h  files.c  files.cpp  files.h  files.hpp  game.c  game.cpp  global.c  global.h  input.c  input.cpp  input.h  input.hpp  (+26 more)
src/entities/: camera.c  camera.h  enemy.c  enemy.h  entity.c  entity.h  level.c  level.h  player.c  player.h
src/inlevel/: camera.c  enemy.c  enemy.h  level.c  player.c
src/level/: block.c  block.cpp  block.hpp  checkpoint.cpp  checkpoint.hpp  coin.cpp  coin.hpp  enemy.c  enemy.cpp  enemy.h  enemy.hpp  grappling_hook.cpp  grappling_hook.hpp  level.c  level.cpp  level.h  level.hpp  moving_platform.cpp  moving_platform.hpp  player.c  player.cpp  player.h  player.hpp  powerups.c  powerups.cpp  powerups.h  powerups.hpp  textbox.cpp  textbox.hpp
src/level/npc/: npc.cpp  npc.hpp  princess.cpp  princess.hpp
